fixed the alignment of the div border after about me section.

--- a/styles/home.css
+++ b/styles/home.css
@@ -255,7 +255,6 @@ button.btn-get:active {
   width: 80%;
   justify-self: center;
   margin-bottom: 6em;
-  margin-right: 6em;
   margin-top: 6em;
 }
 
